Çıktılar.txt
PS C:\dev\eci\services\core\services\core> cd C:\dev\eci\services\core
PS C:\dev\eci\services\core> npm i

up to date, audited 944 packages in 3s

232 packages are looking for funding
  run `npm fund` for details

3 vulnerabilities (1 low, 1 moderate, 1 high)

To address all issues, run:
  npm audit fix

Run `npm audit` for details.
PS C:\dev\eci\services\core> cd C:\dev\eci
PS C:\dev\eci> npm run eci:db

> eci@0.0.1 eci:db
> npm -w @eci/core run prisma:deploy


> @eci/core@0.0.1 prisma:deploy
> prisma migrate deploy

Environment variables loaded from .env
Prisma schema loaded from prisma\schema.prisma
Datasource "db": PostgreSQL database "eci", schema "public" at "localhost:5432"

13 migrations found in prisma/migrations


No pending migrations to apply.
PS C:\dev\eci> curl.exe -X POST "http://localhost:3001/v1/connections/<CONNECTION_ID>/sync/finance" `
>>   -H "Content-Type: application/json" `
>>   -d "{\"windowDays\":15,\"lookbackWindows\":2,\"size\":1000}"
{"error":"internal_error","message":"Expected property name or '}' in JSON at position 1 (line 1 column 2)"}curl: (3) unmatched close brace/bracket in URL position 47:
windowDays\:15,\lookbackWindows\:2,\size\:1000}
                                              ^
PS C:\dev\eci> curl.exe "http://localhost:3001/v1/finance/summary?connectionId=<CONNECTION_ID>&startDate=2026-01-08T00:00:00.000Z&endDate=2026-01-23T23:59:59.999Z"
{"error":"not_found"}
PS C:\dev\eci> curl.exe "http://localhost:3001/v1/finance/settlements?connectionId=<CONNECTION_ID>&startDate=2026-01-08T00:00:00.000Z&endDate=2026-01-23T23:59:59.999Z&transactionType=SellerRevenuePositive&page=0&pageSize=100"
{"page":0,"pageSize":100,"total":0,"rows":[]}
PS C:\dev\eci> curl.exe "http://localhost:3001/v1/finance/ledger?connectionId=<CONNECTION_ID>&startDate=2026-01-08T00:00:00.000Z&endDate=2026-01-23T23:59:59.999Z&transactionType=PaymentOrder&page=0&pageSize=100"
{"error":"not_found"}
PS C:\dev\eci> cd C:\dev\eci\services\core
PS C:\dev\eci\services\core> npx ts-node scripts/finance-probe-one-window.ts
C:\dev\eci\services\core\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
scripts/finance-probe-one-window.ts:26:16 - error TS2353: Object literal may only specify known properties, and 'trendyol' does not exist in type 'ConnectionInclude<DefaultArgs>'.

26     include: { trendyol: true },
                  ~~~~~~~~
scripts/finance-probe-one-window.ts:29:14 - error TS2339: Property 'trendyol' does not exist on type '{ id: string; type: string; name: string; status: string; configEnc: string; createdAt: Date; updatedAt: Date; }'.

29   if (!conn?.trendyol) throw new Error("No trendyol connection found");
                ~~~~~~~~
scripts/finance-probe-one-window.ts:31:20 - error TS2339: Property 'trendyol' does not exist on type '{ id: string; type: string; name: string; status: string; configEnc: string; createdAt: Date; updatedAt: Date; }'.

31   const cfg = conn.trendyol as any;
                      ~~~~~~~~

    at createTSError (C:\dev\eci\services\core\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\dev\eci\services\core\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\dev\eci\services\core\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\dev\eci\services\core\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\dev\eci\services\core\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1839:10
    at Object.require.extensions.<computed> [as .ts] (C:\dev\eci\services\core\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2353, 2339, 2339 ]
}
PS C:\dev\eci\services\core> npx ts-node scripts/finance-probe-latest-connection.ts
C:\dev\eci\services\core\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
scripts/finance-probe-latest-connection.ts:49:16 - error TS2353: Object literal may only specify known properties, and 'trendyol' does not exist in type 'ConnectionInclude<DefaultArgs>'.

49     include: { trendyol: true },
                  ~~~~~~~~
scripts/finance-probe-latest-connection.ts:52:14 - error TS2339: Property 'trendyol' does not exist on type '{ id: string; type: string; name: string; status: string; configEnc: string; createdAt: Date; updatedAt: Date; }'.

52   if (!conn?.trendyol) throw new Error("No trendyol connection found");
                ~~~~~~~~
scripts/finance-probe-latest-connection.ts:54:20 - error TS2339: Property 'trendyol' does not exist on type '{ id: string; type: string; name: string; status: string; configEnc: string; createdAt: Date; updatedAt: Date; }'.

54   const cfg = conn.trendyol as any;
                      ~~~~~~~~

    at createTSError (C:\dev\eci\services\core\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\dev\eci\services\core\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\dev\eci\services\core\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\dev\eci\services\core\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\dev\eci\services\core\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1839:10
    at Object.require.extensions.<computed> [as .ts] (C:\dev\eci\services\core\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2353, 2339, 2339 ]
}
PS C:\dev\eci\services\core>

PS C:\dev\eci\services\core> npm run eci:api

> @eci/core@0.0.1 eci:api
> tsx src/eci/server.ts

[eci-api] pid=27020 listening on http://127.0.0.1:3001
[redis] connect
[redis] ready
[eci-api] route_error SyntaxError: Expected property name or '}' in JSON at position 1 (line 1 column 2)
    at JSON.parse (<anonymous>)
    at parse (C:\dev\eci\node_modules\body-parser\lib\types\json.js:74:19)
    at C:\dev\eci\node_modules\body-parser\lib\read.js:163:18
    at AsyncResource.runInAsyncScope (node:async_hooks:214:14)
    at invokeCallback (C:\dev\eci\node_modules\raw-body\index.js:238:16)
    at done (C:\dev\eci\node_modules\raw-body\index.js:227:7)
    at IncomingMessage.onEnd (C:\dev\eci\node_modules\raw-body\index.js:287:7)
    at IncomingMessage.emit (node:events:519:28)
    at endReadableNT (node:internal/streams/readable:1698:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21) {
  expose: true,
  statusCode: 400,
  status: 400,
  body: '{\\',
  type: 'entity.parse.failed'
}

PS C:\dev\eci\services\core> npm run eci:worker

> @eci/core@0.0.1 eci:worker
> tsx src/eci/worker.ts


node:internal/modules/run_main:123
    triggerUncaughtException(
    ^
Error: Transform failed with 1 error:
C:\dev\eci\services\core\src\eci\worker.ts:51:0: ERROR: Expected identifier but found ","
    at failureErrorWithLog (C:\dev\eci\node_modules\esbuild\lib\main.js:1467:15)
    at C:\dev\eci\node_modules\esbuild\lib\main.js:736:50
    at responseCallbacks.<computed> (C:\dev\eci\node_modules\esbuild\lib\main.js:603:9)
    at handleIncomingPacket (C:\dev\eci\node_modules\esbuild\lib\main.js:658:12)
    at Socket.readFromStdout (C:\dev\eci\node_modules\esbuild\lib\main.js:581:7)
    at Socket.emit (node:events:519:28)
    at addChunk (node:internal/streams/readable:561:12)
    at readableAddChunkPushByteMode (node:internal/streams/readable:512:3)
    at Readable.push (node:internal/streams/readable:392:5)
    at Pipe.onStreamRead (node:internal/stream_base_commons:189:23) {
  name: 'TransformError'
}

Node.js v22.19.0
npm error Lifecycle script `eci:worker` failed with error:
npm error code 1
npm error path C:\dev\eci\services\core
npm error workspace @eci/core@0.0.1
npm error location C:\dev\eci\services\core
npm error command failed
npm error command C:\WINDOWS\system32\cmd.exe /d /s /c tsx src/eci/worker.ts
PS C:\dev\eci\services\core>

